[gd_scene load_steps=10 format=3 uid="uid://bnlvq0ut74cfd"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_tb1br"]
[ext_resource type="PackedScene" uid="uid://2bmn74221edj" path="res://character/orbital_camera.tscn" id="2_iejax"]
[ext_resource type="PackedScene" uid="uid://dv3lomnmet43n" path="res://utility/camera_pointer.tscn" id="3_scwjp"]
[ext_resource type="PackedScene" uid="uid://042fxrjf3vsx" path="res://weapons/bullet_source.tscn" id="4_pdcr7"]
[ext_resource type="Script" path="res://scripts/player_input_handler.gd" id="5_qo7sf"]
[ext_resource type="PackedScene" uid="uid://cmmulbrsy1iwr" path="res://GUI/player_hud.tscn" id="6_jp61w"]
[ext_resource type="Script" path="res://scripts/player_body_handler.gd" id="6_p31lb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mm66v"]

[sub_resource type="BoxMesh" id="BoxMesh_gn7qv"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("camera", "display", "bullet_source", "input_handler", "body_handler")]
script = ExtResource("1_tb1br")
camera = NodePath("OrbitalCamera")
display = NodePath("PlayerHUD")
bullet_source = NodePath("OrbitalCamera/CameraFacer/BulletSource")
input_handler = NodePath("PlayerInputHandler")
body_handler = NodePath("PlayerBodyHandler")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_mm66v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("BoxMesh_gn7qv")
skeleton = NodePath("../..")

[node name="OrbitalCamera" parent="." instance=ExtResource("2_iejax")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)

[node name="CameraFacer" parent="OrbitalCamera" node_paths=PackedStringArray("_camera") instance=ExtResource("3_scwjp")]
_camera = NodePath("../VerticalPivot/Camera")

[node name="BulletSource" parent="OrbitalCamera/CameraFacer" instance=ExtResource("4_pdcr7")]

[node name="PlayerInputHandler" type="Node" parent="."]
script = ExtResource("5_qo7sf")

[node name="PlayerBodyHandler" type="Node" parent="." node_paths=PackedStringArray("_player", "_player_collision_shape", "input_handler")]
script = ExtResource("6_p31lb")
_player = NodePath("..")
_player_collision_shape = NodePath("../CollisionShape3D")
input_handler = NodePath("../PlayerInputHandler")

[node name="PlayerHUD" parent="." instance=ExtResource("6_jp61w")]

[connection signal="on_player_bullet_fire" from="PlayerInputHandler" to="." method="_on_player_bullet_fire"]
[connection signal="on_player_jump_input" from="PlayerInputHandler" to="." method="_on_player_jump_input"]
[connection signal="on_translational_motion_input" from="PlayerInputHandler" to="." method="_on_translational_motion_input"]

[editable path="OrbitalCamera"]
